# crabble

./: README.md
.github/workflows/: publish.yaml
crabble-web/: config.js  index.html  package-lock.json  package.json
crabble-web/src/: App.svelte  api.ts  app.css  shared.svelte.ts
crabble-web/src/lib/: GameInfo.svelte  GameOver.svelte  ModeSelector.svelte  Shuffler.svelte
crabble-web/src/lib/components/: Button.svelte  Dialog.svelte  Picker.svelte  ProgressBar.svelte  WordBlock.svelte
crabnet/: README.md  main.py  puzzles.json  pyproject.toml  utilitarianism.py
